# giaic-q4

./: README.md
-00-my-playground/01-basic-synchronous-agent/: main.py
-00-my-playground/01-the-agent-syntax-test/: main.py  pyproject.toml
-00-my-playground/02-basic-asynchronous-agent/: main.py  pyproject.toml
-00-my-playground/03-basic-tool-calling/: main.py  pyproject.toml
00-chainlit-test-pre-class-02/: main.py  pyproject.toml
01-ai-agents/01-getting-started-with-agents/01-uv-pacakge/: pyproject.toml
01-ai-agents/01-getting-started-with-agents/01-uv-pacakge/src/01_uv_pacakge/: __init__.py
01-ai-agents/01-getting-started-with-agents/06-openai-agents-sdk/: pyproject.toml
01-ai-agents/my-projects/: cheat.py  file_conversion.py  mails.json  main.py  notes.txt  pyproject.toml  rag.py  try_vector.py
01-ai-agents/practice/: 01-guardrails.py  chaapa.py  experiment.py  guardrails.py  main.py  pyproject.toml  test.py
02-uv-basic/: main.py  pyproject.toml
03-hello-chainlit/: chatbot.py  main.py  pyproject.toml
04-hello-agent/: main.py
05-hello-openrouter/: .env  pyproject.toml
06-openai-agents-sdk/: .env  main.py  pyproject.toml
07-hello-litellm/: .env  main.py  pyproject.toml
08-run-level-agent/: main.py
10-streaming/: main.py
11-chatbot-flask-nextjs/server/: app.py  pyproject.toml
12-chatbot-with-beautiful-ui/client/: index.html  package.json
12-chatbot-with-beautiful-ui/server/: app.py
13-openai-docs/01-agents/: main.py
14-history-with-streaming/: main.py
15-history-with-chainlit/: README.md  main.py
16-streaming-with-chainlit/: main.py
17-history-and-streaming-with-chainlit/: main.py  pyproject.toml
assignments/01-multi-agent-system/: main.py  (+1 more)
(+86 files in other folders)
