[project]
name = "07-hello-litellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents[litellm]>=0.0.16",
]

[project.scripts]
mistral = "07-hello-litellm.hello:call_mistral"

dependencies = [
    "google-genai>=1.16.1",
    "litellm>=1.71.1",
    "python-dotenv>=1.1.0",
]
