[project]
name = "01-uv-pacakge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Huzair Ahmed Khan", email = "huzairahmedkhan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
01-uv-pacakge = "01_uv_pacakge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
